# box

./: .gitignore  LIBZT_INTEGRATION.md  LICENSE  README.md  TODO.md  build.sh
.github/workflows/: native.yml  rootfs-alpine.yml  rootfs-ubuntu.yml  rootfs.yml
cli/: Boxfile.example  box
cli/completions/: box.bash
libarchive/: README.md
proot/: README.md
rootfs/: README.md
socks5d/: dnsfwd.c  socks5d.c
talloc/: README.md
ztproxy/: CMakeLists.txt  lb.c  main.c  sio_stubs.c  sockscat.c
